tests/fixtures/typeck/array_element_type_mismatch.veyl
fn main() {
    let values = [1, true];
}
